--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@nestjs/platform-socket.io": "^11.1.3",
     "@nestjs/throttler": "^6.4.0",
     "@nestjs/websockets": "^11.1.3",
+    "@supabase/supabase-js": "^2.39.7",
     "@types/bcryptjs": "^3.0.0",
     "@types/multer": "^2.0.0",
     "@types/nodemailer": "^6.4.17",
@@ -50,6 +51,7 @@
     "helmet": "^8.1.0",
     "mongoose": "^8.16.2",
     "multer": "^2.0.1",
+    "node-cron": "^4.2.1",
     "nodemailer": "^7.0.5",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
@@ -70,6 +72,7 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.7",
+    "@types/node-cron": "^3.0.11",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
