--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
   "license": "UNLICENSED",
   "scripts": {
     "preinstall": "npm install -g npm@latest",
-  "install": "npm install --force",
-  "prebuild": "npm install -g @nestjs/cli",
-  "build": "nest build && tsc -p tsconfig.build.json",
-  "start": "node dist/main",
-  "engine-strict": true,
+    "install": "npm install --force",
+    "prebuild": "npm install -g @nestjs/cli",
+    "build": "nest build && tsc -p tsconfig.build.json",
+    "start": "node dist/main",
+    "engine-strict": true,
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
@@ -24,28 +24,26 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.842.0",
-    "@aws-sdk/s3-request-presigner": "^3.842.0",
+    "@aws-sdk/client-s3": "^3.850.0",
+    "@aws-sdk/s3-request-presigner": "^3.850.0",
     "@fastify/helmet": "^13.0.1",
-    "@nestjs/common": "^11.0.1",
-    "@nestjs/config": "^4.0.2",
     "@nestjs/cli": "^11.0.7",
-    "@nestjs/core": "^11.0.1",
+    "@nestjs/common": "^11.1.5",
+    "@nestjs/config": "^4.0.2",
+    "@nestjs/core": "^11.1.5",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/mapped-types": "^2.1.0",
     "@nestjs/mongoose": "^11.0.3",
     "@nestjs/passport": "^11.0.5",
-    "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/platform-express": "^11.1.5",
     "@nestjs/platform-fastify": "^11.1.3",
     "@nestjs/platform-socket.io": "^11.1.3",
     "@nestjs/throttler": "^6.4.0",
-    "@nestjs/websockets": "^11.1.3",
-    "@supabase/supabase-js": "^2.39.7",
+    "@nestjs/websockets": "^11.1.5",
+    "@supabase/supabase-js": "^2.52.1",
     "@types/bcryptjs": "^3.0.0",
     "@types/multer": "^2.0.0",
-    "@types/nodemailer": "^6.4.17",
     "@types/passport-jwt": "^4.0.1",
-    "@types/uuid": "^10.0.0",
     "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
@@ -54,7 +52,7 @@
     "dotenv": "^17.1.0",
     "ethers": "^6.15.0",
     "helmet": "^8.1.0",
-    "mongoose": "^8.16.2",
+    "mongoose": "^8.16.5",
     "multer": "^2.0.1",
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.5",
@@ -73,11 +71,14 @@
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.7",
     "@types/bcrypt": "^5.0.2",
-    "@types/express": "^5.0.0",
+    "@types/express": "^5.0.3",
     "@types/jest": "^29.5.14",
-    "@types/node": "^22.10.7",
+    "@types/node": "^22.16.5",
     "@types/node-cron": "^3.0.11",
+    "@types/nodemailer": "^6.4.17",
+    "@types/socket.io": "^3.0.2",
     "@types/supertest": "^6.0.2",
+    "@types/uuid": "^10.0.0",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
@@ -111,6 +112,6 @@
     "testEnvironment": "node"
   },
   "engines": {
-  "node": ">=20.0.0"
-}
+    "node": ">=20.0.0"
+  }
 }
