--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
+    "preinstall": "npm install -g npm@latest",
+    "install": "npm install --force",
     "prebuild": "npm install -g @nestjs/cli",
     "build": "nest build && tsc -p tsconfig.build.json",
     "start": "node dist/main",
@@ -42,6 +44,13 @@
     "@types/bcryptjs": "^3.0.0",
     "@types/multer": "^2.0.0",
     "@types/passport-jwt": "^4.0.1",
+    "@types/bcrypt": "^5.0.2",
+    "@types/express": "^5.0.3",
+    "@types/node": "^22.16.5",
+    "@types/node-cron": "^3.0.11",
+    "@types/nodemailer": "^6.4.17",
+    "@types/socket.io": "^3.0.2",
+    "@types/uuid": "^10.0.0",
     "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
@@ -68,15 +77,8 @@
     "@nestjs/testing": "^11.0.1",
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.7",
-    "@types/bcrypt": "^5.0.2",
-    "@types/express": "^5.0.3",
     "@types/jest": "^29.5.14",
-    "@types/node": "^22.16.5",
-    "@types/node-cron": "^3.0.11",
-    "@types/nodemailer": "^6.4.17",
-    "@types/socket.io": "^3.0.2",
     "@types/supertest": "^6.0.2",
-    "@types/uuid": "^10.0.0",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
