--- a/package.json
+++ b/package.json
@@ -6,8 +6,6 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "preinstall": "npm install -g npm@latest",
-    "install": "npm install --force",
     "prebuild": "npm install -g @nestjs/cli",
     "build": "nest build && tsc -p tsconfig.build.json",
     "start": "node dist/main",
@@ -41,15 +39,11 @@
     "@nestjs/throttler": "^6.4.0",
     "@nestjs/websockets": "^11.1.5",
     "@supabase/supabase-js": "^2.52.1",
+    "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^3.0.0",
     "@types/multer": "^2.0.0",
-    "@types/passport-jwt": "^4.0.1",
-    "@types/bcrypt": "^5.0.2",
-    "@types/express": "^5.0.3",
-    "@types/node": "^22.16.5",
     "@types/node-cron": "^3.0.11",
-    "@types/nodemailer": "^6.4.17",
-    "@types/socket.io": "^3.0.2",
+    "@types/passport-jwt": "^4.0.1",
     "@types/uuid": "^10.0.0",
     "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
@@ -77,7 +71,12 @@
     "@nestjs/testing": "^11.0.1",
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.7",
+    "@types/express": "^5.0.3",
     "@types/jest": "^29.5.14",
+    "@types/mongoose": "^5.11.97",
+    "@types/node": "^24.1.0",
+    "@types/nodemailer": "^6.4.17",
+    "@types/socket.io": "^3.0.2",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
